--- a/src/styles/ios-development.css
+++ b/src/styles/ios-development.css
@@ -2,7 +2,7 @@
 .iosdev-row {
     display: flex;
     flex-wrap: wrap;
-    max-width: 1280px;
+    max-width: 1150px;
     margin: 0 auto;
     padding: 50px 20px;
     align-items: center;
@@ -51,6 +51,7 @@
     font-weight: 400;
     line-height: 1.6;
     margin-bottom: 30px;
+    text-align: center;
 }
 
 .growth-button {
