--- a/src/styles/smm.css
+++ b/src/styles/smm.css
@@ -2,7 +2,7 @@
 .smm-row {
     display: flex;
     flex-wrap: wrap;
-    max-width: 1280px;
+    max-width: 1150px;
     margin: 0 auto;
     padding: 50px 20px;
     align-items: center;
@@ -42,6 +42,7 @@
     font-family: 'Poppins', sans-serif;
     font-weight: 700;
     margin-bottom: 20px;
+    text-align: center;
 }
 
 .smm-content-col p {
@@ -51,6 +52,7 @@
     font-weight: 400;
     line-height: 1.6;
     margin-bottom: 30px;
+    text-align: center;
 }
 
 .growth-button {
